--- a/BlazorWasm/Pages/Index.razor
+++ b/BlazorWasm/Pages/Index.razor
@@ -83,3 +83,37 @@
 
 <h1>Hello, world!</h1>
 <canvas width="640" height="360" @onkeydown="@KeyDown" @onkeyup="@KeyUp" tabindex="0"></canvas>
+<table>
+    <thead>
+    <tr>
+        <th>Key</th>
+        <th>Browser</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Menu</td>
+        <td>Escape</td>
+    </tr>
+    <tr>
+        <td>Option Up</td>
+        <td>ArrowUp</td>
+    </tr>
+    <tr>
+        <td>Option Down</td>
+        <td>ArrowDown</td>
+    </tr>
+    <tr>
+        <td>Accept Option</td>
+        <td>Enter</td>
+    </tr>
+    <tr>
+        <td>Turn Left</td>
+        <td>ArrowLeft</td>
+    </tr>
+    <tr>
+        <td>Turn Right</td>
+        <td>ArrowRight</td>
+    </tr>
+    </tbody>
+</table>
