--- a/BlazorServer/Pages/_Layout.cshtml
+++ b/BlazorServer/Pages/_Layout.cshtml
@@ -5,33 +5,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
-    <link href="BlazorServer.styles.css" rel="stylesheet" />
-    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <base href="~/"/>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
+    <link href="css/site.css" rel="stylesheet"/>
+    <link href="BlazorServer.styles.css" rel="stylesheet"/>
+    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
 <body>
-    @RenderBody()
+@RenderBody()
 
-    <div id="blazor-error-ui">
-        <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
-        </environment>
-        <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
-        </environment>
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
-    <script src="./Rendering/ShaderDefault.js"></script>
-    <script src="./Rendering/Program.js"></script>
-    <script src="./Rendering/Shader.js"></script>
-    <script src="./Rendering/Actor.js"></script>
-    <script src="./Rendering/Scene.js"></script>
-    <script src="_framework/blazor.server.js"></script>
-    <script src="main.js"></script>
+<div id="blazor-error-ui">
+    <environment include="Staging,Production">
+        An error has occurred. This application may no longer respond until reloaded.
+    </environment>
+    <environment include="Development">
+        An unhandled exception has occurred. See browser dev tools for details.
+    </environment>
+    <a href="" class="reload">Reload</a>
+    <a class="dismiss">🗙</a>
+</div>
+<script src="_framework/blazor.server.js"></script>
+<script src="Rendering/ShaderDefault.js"></script>
+<script src="Rendering/Program.js"></script>
+<script src="Rendering/Shader.js"></script>
+<script src="Rendering/Actor.js"></script>
+<script src="Rendering/Scene.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
